# Algorithm-Engineering

./: .gitignore  Blacher_Anmerkungen.txt  README.md
Exam Assignments/: main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc
Exam Assignments/Chapters/01/: 01.aux  01.fdb_latexmk  01.fls  01.tex
Exam Assignments/Chapters/02/: 02.aux  02.fdb_latexmk  02.fls  02.tex
Exam Assignments/Chapters/03/: 03.fdb_latexmk  03.fls  03.out  03.tex  calculate_pi_v2.cpp
Exam Assignments/Chapters/04/: 04.aux  04.fdb_latexmk  04.fls  04.out  04.tex  a.out  min_max_quicksort.cpp  min_max_quicksort_array_sizes.cpp  speedup.csv
Exam Assignments/Chapters/06/: 06.fdb_latexmk  06.fls
Exam Assignments/Chapters/07/: 07.aux  07.fdb_latexmk  07.fls  07.tex
Exam Assignments/Chapters/08/: 08.aux  08.fdb_latexmk  08.fls  08.out  08.tex
Exam Assignments/Chapters/09/: 09.aux  09.fdb_latexmk  09.fls  09.tex
Exam Assignments/Chapters/10/: 10.fdb_latexmk  10.fls  10.out  10.tex
Exam Assignments/Chapters/11/: 11.fdb_latexmk  11.out  11.tex
Exam Assignments/Chapters/12/: 12.aux  12.fdb_latexmk  12.fls  12.tex
Exam Assignments/Code/einspeed/: CMakeLists.txt  Makefile  Requirements.txt  einspeed.py
Exam Assignments/Code/einspeed/.legacy/tests/: CMakeLists.txt  catch_tests_blas.cpp
Exam Assignments/Code/einspeed/tests/: CMakeLists.txt
Exam Assignments/paper/: paper.aux  paper.blg  paper.fdb_latexmk  paper.fls  paper.out  paper.tex
answers/: main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc
answers/chapters/01/: 01.aux  01.fls  01.out  01.tex  a.out  page_15.xcf
answers/chapters/02/: 02.fdb_latexmk  02.fls  02.out  02.tex
answers/chapters/03/: 03.aux  03.fdb_latexmk  03.fls  03.tex  a.out
answers/chapters/04/: 04.fls  04.tex
answers/chapters/06/: 06.aux  06.fdb_latexmk  06.fls  06.out  06.tex
answers/chapters/07/: 07.aux  07.out  07.tex
answers/chapters/08/: 08.fls  08.tex
answers/chapters/09/: 09.fls  09.out  09.tex
answers/chapters/10/: 10.aux  10.tex
answers/chapters/11/: 11.aux  11.fdb_latexmk  11.fls  11.tex
answers/chapters/12/: 12.out
answers/code/01/: Makefile  calculate_pi  (+1 more)
paper/: Makefile  literature.bib  paper.aux  paper.bbl  paper.fdb_latexmk  paper.fls  paper.out  paper.tex
paper/src/: scaling_study.csv
project/: CMakeLists.txt  Makefile  README.txt  einspeed.py
project/.legacy/: Makefile  catch_tests_fizzbuzz.cpp  func.cpp  parse_tensor.cpp  setup.py
project/include/: blas.h  compute_einsum (copy).h  compute_einsum.h  func.h  numpy_types.h  parse_tensor.h  tensor.h  unroll_loop.h
project/src/: CMakeLists.txt  einspeed.cpp
project/tests/: CMakeLists.txt  catch_main.cpp  catch_tests_tensor.cpp  catch_tests_tensor_blas.cpp
(+47 files in other folders)
